feat: add model, object, route for setting
